fixed the logo, worked on the text alignment

--- a/Uppgift2.css
+++ b/Uppgift2.css
@@ -8,25 +8,42 @@ body{
     font-family: zorus-sarif; 
     margin: 0;
 }
-img{
+
+/*img{
     position: fixed;
+    float: right;
+    margin-left: 5px;
     width: 25vw;
     right: 5%;
     top: 2%;
-    z-index: 1;
-}
+    }*/
 h1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 35vh;
+    width: 35vw;
     margin: 0;
     position: fixed;
-    font-size: 2.8vw;
-    right: 9%;
-    top: 20%;
+    left: 70vw;
+    top: auto;
+    
+    
+    background: url(zen-circle.jpg) no-repeat;
+    background-size: 20vw;
+    background-position: center;
+    
+    font-size: 2.2vw;
+    text-align: center ;
+    padding-top: 0;
+    
 }
 
 header{
     background: linear-gradient(rgba(255,255,255,0) 85%, rgba(218,210,186, 1) 100%), url('zen-background2.jpg') no-repeat right /cover;
     height: 600px;
     margin: 0;
+    z-index: -1;
 }
 
 header h2{
@@ -36,12 +53,21 @@ header h2{
     padding-top: 450px;
     padding-right: 125px;
     }
+
+@media (min-width: 768px){
+    
 h3{
-    padding-left: 10%;
+    width: 70%;
+    max-width: 1000px;
+    padding-right: 70vw;
     font-size: 30px;
+    margin: 30px auto 0 auto;
 }
 p{
-    padding-left: 10%;
-    font-size: 20px;
+    width: 70%;
+    max-width: 1000px;
+    margin: 15px auto;
+    font-size: 25px;
 
+}
 }
